[package]
name = "ztl"
version = "0.0.1"
edition = "2021"

[dependencies]
biblatex = "0.9.3"
clap = { version = "4.5.18", features = ["derive"] }
comrak = { version = "0.28.0", default-features = false }
glob = "0.3.1"
pulldown-cmark = "0.12.0"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
anyhow = "1.0"
itertools = "0.13.0"
notify = "6.1.1"
crossbeam-channel = "0.5.13"
