[package]
name = "ztl"
version = "0.0.1"
edition = "2021"
description = "A fast static note generator with everything built-in"

[workspace]
members = ["ztl-res", "ztl-base"]

[[bin]]
name = "ztl"
path = "src/main.rs"

[features]
schedule = ["dep:jiff", "dep:nom", "dep:regex"]
anki = ["dep:genanki-rs"]
mastodon = ["dep:scraper", "dep:markup5ever", "dep:regex"]

[dependencies]
clap = { version = "4.5.18", features = ["derive", "std", "help", "usage", "suggestions", "color"], default-features = false }
glob = "0.3.1"
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
toml = { version = "0.9.8", features = ["preserve_order"] }
anyhow = "1.0"
itertools = "0.13.0"
notify = "6.1.1"
crossbeam-channel = "0.5.13"
dyn-fmt = "0.4.3"
which = "7"
genanki-rs = { version = "0.4", optional = true }
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
indexmap = { version = "1", features = ["serde"] }
jiff = { version = "0.2.15", optional = true }
nom = { version = "8.0.0", optional = true }
regex = { version = "1.11.0", default-features = false, features = ["std"], optional = true }
scraper = { version = "0.24.0", optional = true }
markup5ever = { version = "0.35", optional = true }

ztl-base = { path = "ztl-base", features = ["parser", "htmlrender"] }
serde_json = "1.0.145"
tiny_http = "0.12.0"
colored = "3.0.0"
