[package]
name = "ztl-base"
version = "0.0.1"
edition = "2021"

[features]
parser = ["dep:biblatex", "dep:comrak", "dep:regex", "dep:scraper", "dep:markup5ever"]
htmlrender = ["dep:tera"]

[dependencies]
glob = "0.3.1"
sha2 = "0.10.8"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
indexmap = { version = "1", features = ["serde"] }
thiserror = "2.0.17"
glob-match = "0.2.1"

biblatex = { version = "0.11", optional = true}
comrak = { version = "0.28.0", default-features = false, optional = true }
regex = { version = "1.11.0", default-features = false, features = ["std"], optional = true }
scraper = { version = "0.24.0", optional = true }
markup5ever = { version = "0.35", optional = true }
once_cell = "1.20.1"
tempfile = "3.13.0"
anyhow = "1.0"
tera = { version = "1.20.1", default-features = false, optional = true }
annotate-snippets = "0.12.8"
line-numbers = "0.4.0"
