[package]
name = "ztl-res"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
indexmap = "2.12.0"
itertools = "0.14.0"
magick_rust = "2.0.0"
mupdf = { path = "/mnt/HC_Volume_103297500/mupdf-rs", features = ["sys-lib"], default-features = false }
reqwest = { version = "0.12.24", features = ["blocking"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thirtyfour = { git = "https://github.com/vrtgs/thirtyfour.git" }
thiserror = "2.0.17"
tokio = "1.48.0"
toml = { version = "0.9.8", default-features = false }
nix = { version = "0.29", features = ["ioctl"] }

ztl-base = { path = "../ztl-base", features = ["htmlrender"] }
